# Virtual-Assistant

./: README.md  package-lock.json  package.json
backend/: .gitignore  pyproject.toml  server.py
frontend/: .env  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/components/: index.css  index.tsx
frontend/src/components/Chat/: Chat.css  Chat.tsx
frontend/src/components/Chat/ChatMassage/: ChatMassage .css  ChatMassage .tsx  ChatMassage.css  ChatMassage.tsx
frontend/src/components/Logo/: Logo.css  Logo.tsx
frontend/src/components/SearchBar/: SearchBar.css  SearchBar.tsx
frontend/src/components/SearchResult/: SearchResult.css  SearchResult.tsx
frontend/src/services/: searchController.ts
frontend/src/types/: chatTypes.ts
